--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>💔Perdóname💔</title>
+    <title>💔Perdóname amor de mi corazon💔</title>
   </head>
   <body>
     <main class="container">
